      focus thread pane
    * CTRL-RETURN (customizable): same, but select all results
    * ESCAPE: cancel search, focus thread pane
  - before starting to type in the completion box, the popup lists
    the 5 more recently selected folders (to be selected with up/down)
  - new "Save and Go" feature

  - double-clicking on a rule in the pref dialog to edit it
  - make Nostalgy work with TB 3.0 (tested with 3.0a1pre)
  - Thunderbirds shortcuts that are hidden by Nostalgy can now
    be used (type "Escape" before)
  - ask for a confirmation when cancelling changes (with Escape)
    in the preference dialog
  - bug fix: custom shortcuts are now working in stand-alone message windows
  - bug fix: custom shortcuts with no modifier are not recognized when typing
    in a text box (QuickSearch or Nostalgy's completion box)
  - bug fix: better detection of when Nostalgy's completion box loses focus

0.2.12
  - bug fix: use the mime-decoded version for the subject (for matching
    rules and searching messages with same subject); needed to deal
    with accents in subjects
  - remove re:/fwd:/[...] strings from subjects (for matching rules
    and searching messages with same subject)

0.2.11
  - bug fix: Virtual Folder were not found under some circumstances
  - bug fix: internal naming conflict with the Habu extension

0.2.10
  - bug fix: custom shortcuts did not work in mode "restrict to current
    server"
  - bug fix: the folder cache was invalidated when messages were added to
    or deleted from an imap folder
  - bug fix: the folder listener was not unloaded, causing "ClearNostalgyCache
    is not defined" messages in the Error Console
  - bug fix: "G"oing to a Virtual Folder did not work
  - bug fix: Virtual Folders could not be selected for custom shortcuts
  - bug fix: customized keys for Save/Copy commands did not work
    in stand-alone message windows 

0.2.9
  - the user can define custom shortcuts (Go/Save/Copy to some specific folder)